# Timber

./: .gitignore  LICENSE  README.md  pyproject.toml
2026/03/: 2026_03_01 16_20_39 Sun.dsevents  2026_03_01 16_20_39 Sun.dslog  2026_03_01 16_26_53 Sun.dsevents  2026_03_01 16_26_53 Sun.dslog  2026_03_01 16_26_56 Sun.dsevents  2026_03_01 16_26_56 Sun.dslog  2026_03_01 16_31_13 Sun.dsevents  2026_03_01 16_31_13 Sun.dslog  2026_03_01 16_31_17 Sun.dsevents  2026_03_01 16_31_17 Sun.dslog  2026_03_01 16_34_27 Sun.dsevents  2026_03_01 16_34_27 Sun.dslog  2026_03_03 17_52_39 Tue.dsevents  2026_03_03 17_52_39 Tue.dslog  2026_03_03 17_52_44 Tue.dsevents  2026_03_03 17_52_44 Tue.dslog  2026_03_03 18_03_39 Tue.dsevents  2026_03_03 18_03_39 Tue.dslog  2026_03_03 18_03_43 Tue.dsevents  2026_03_03 18_03_43 Tue.dslog  2026_03_03 19_10_38 Tue.dsevents  2026_03_03 19_10_38 Tue.dslog  2026_03_03 19_24_43 Tue.dsevents  2026_03_03 19_24_43 Tue.dslog  2026_03_03 19_24_46 Tue.dsevents  2026_03_03 19_24_46 Tue.dslog  2026_03_03 19_25_02 Tue.dsevents  2026_03_03 19_25_02 Tue.dslog  2026_03_03 19_28_16 Tue.dsevents  2026_03_03 19_28_16 Tue.dslog  2026_03_03 19_28_20 Tue.dsevents  2026_03_03 19_28_20 Tue.dslog  2026_03_03 19_33_55 Tue.dsevents  2026_03_03 19_33_55 Tue.dslog  2026_03_03 19_33_59 Tue.dsevents  (+150 more)
match_processor/: dslog_parser.py  dslog_processor.py  event_formatter.py  match_identifier.py  match_writer.py  process_matches.py
power_analyzer/: analyze_power.py  dip_detector.py  pdh_decoder.py  profile_parser.py  report_formatter.py
shared/: dsevents_parser.py  dslog_parser.py
(+264 files in other folders)
